--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/fontawesome/css/all.css">
     <link rel="stylesheet" href="css/fontawesome/css/fontawesome.min.css">
@@ -13,24 +13,24 @@
 <body>    
 <section id="header">
   <header class="header">
-   <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
     <div class="container">
-    <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
+    <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExampleDefault">
       <ul class="navbar-nav m-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="sobre-mi.html">Sobre mí</a>
+          <a class="nav-link" href="sobre-mi.html">SOBRE MI</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">portfolio</a>
+          <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contacto.html">Contacto</a>
+          <a class="nav-link" href="contacto.html">CONTACTO</a>
         </li>
       </ul>
     </div>
@@ -52,28 +52,31 @@
     <div class="col-4">
         <div class="form-group">
                <div class="button">
-                  <a class="btn btn-info" href="portfolio.html" role="button">MIRÁ MI TRABAJO!</a>
+                  <a class="btn btn-dark" href="portfolio.html" role="button">MIRÁ MI TRABAJO!</a>
+               </div>
+        </div>
     </div>
-</div>
+</div>    
 </section>
 <section id="footer">
-<footer>
+<footer class="footer">
+  <div class="container">
     <div class="row">
-        <div class="col-4">
+        <div class="col-4 mr-auto">
             <a href="index.html" target="Marcos Arrieta 2019">Marcos Arrieta<br> 2019</a>
         </div>
-        <div class="col-4">
-            <a href="whatsapp" target="whatsapp"><img src="" alt="" width=""></a>
-            <a href="instagram" target="Instagram"><img src="" alt="" width=""></a>
-            <a href="linkedin" target="LinkedIn"><img src="" alt="" width=""></a>
+        <div class="col-4 text-mr-auto">
+            <a href="https://wa.me/5491123864531" target="whatsapp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/djmaam/" target="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://join.skype.com/invite/xp1xauXaVZVe" target="Skype"><i class="fab fa-skype"></i></a>
+            <a href="https://www.linkedin.com/in/marcos-antonio-arrieta-marquez-448171193" target="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
         </div>
-        <div class="col-4">
+        <div class="col-4 mr-auto">
             <p>Patrocinado por</p>
-            <a href="https://depcsuite.com/" target="">DePC Suite</a>
-        </div>    
-            
-               
-
+            <a href="https://depcsuite.com/" target="DePC Suite">DePC Suite</a>
+        </div>
+    </div>        
+  </div>          
 </footer>
 </section> 
 </div>   
